# flowcatalyst

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: release-fc-dev.yml  sync-upstream.yml
clients/go-sdk/: .gitignore  ERRORS.md  README.md  doc.go  go.mod  go.sum
clients/go-sdk/auth/: auth.go  claims.go  claims_test.go  client_credentials.go  client_credentials_test.go  hmac.go  hmac_test.go  jwks.go  jwks_test.go  jwt_decode.go  oauth.go  oauth_test.go  pkce.go  pkce_test.go
clients/go-sdk/cache/: cache.go  memory.go  memory_test.go
clients/go-sdk/client/: accessors.go  applications.go  audit_logs.go  client.go  client_test.go  clients.go  connections.go  dispatch_pools.go  errors.go  event_types.go  me.go  openapi.go  permissions.go  principals.go  processes.go  resources_test.go  roles.go  router.go  scheduled_jobs.go  subscriptions.go  types.go
clients/go-sdk/lock/: lock.go  memory.go  memory_test.go
clients/go-sdk/outboxpgx/: schema.go  sink.go
clients/go-sdk/outboxsql/: schema.go  sink.go
clients/go-sdk/scheduledjobs/: runner.go  runner_test.go
clients/go-sdk/sync/: definition_set.go  definitions.go  options.go  result.go  (+2 more)
clients/laravel-sdk/: README.md
clients/typescript-sdk/: README.md  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
crates/fc-platform/: Cargo.toml
crates/fc-platform/src/: lib.rs  router.rs
crates/fc-platform/src/application/: api.rs
crates/fc-platform/src/application_openapi_spec/: repository.rs
crates/fc-platform/src/application_openapi_spec/operations/: sync.rs
crates/fc-platform/src/audit/: api.rs
crates/fc-platform/src/auth/: config_api.rs  oauth_api.rs  oauth_client_repository.rs  oauth_clients_api.rs  oauth_entity.rs  oidc_login_api.rs
crates/fc-platform/src/auth/operations/: create_oauth_client.rs  update_oauth_client.rs
crates/fc-platform/src/client/: api.rs
crates/fc-platform/src/connection/: api.rs
crates/fc-platform/src/cors/: api.rs
crates/fc-platform/src/dispatch_job/: api.rs
crates/fc-platform/src/dispatch_pool/: api.rs
crates/fc-platform/src/email_domain_mapping/: api.rs
crates/fc-platform/src/event/: api.rs
crates/fc-platform/src/event_type/: api.rs  repository.rs
crates/fc-platform/src/identity_provider/: api.rs
crates/fc-platform/src/login_attempt/: api.rs
crates/fc-platform/src/platform_config/: access_api.rs  api.rs
crates/fc-platform/src/principal/: api.rs
crates/fc-platform/src/process/: api.rs  entity.rs  mod.rs  repository.rs
crates/fc-platform/src/process/operations/: archive.rs  create.rs  delete.rs  events.rs  mod.rs  sync.rs  update.rs
crates/fc-platform/src/role/: api.rs  entity.rs
crates/fc-platform/src/scheduled_job/: api.rs
crates/fc-platform/src/seed/: mod.rs
crates/fc-platform/src/service_account/: api.rs  repository.rs
crates/fc-platform/src/service_account/operations/: deactivate.rs  events.rs  mod.rs
crates/fc-platform/src/shared/: application_roles_sdk_api.rs  authorization_service.rs  batch_api.rs  bff_roles_api.rs  bff_scheduled_jobs_api.rs  bootstrap_admin.rs  database.rs  default_processes.rs  filter_options_api.rs  me_api.rs  mod.rs  monitoring_api.rs  sdk_dispatch_jobs_api.rs  sdk_sync_api.rs
crates/fc-platform/src/shared/rate_limit_store/: middleware.rs  mod.rs  postgres.rs  redis.rs
crates/fc-platform/src/shared/server_setup/: platform_routes.rs
crates/fc-platform/src/subscription/: api.rs
crates/fc-platform/tests/support/: mod.rs
crates/fc-router/: Cargo.toml
crates/fc-router/src/: config_sync.rs  error.rs  http_pool.rs  lib.rs  lifecycle.rs  manager.rs  mediator.rs  notification.rs  pool.rs  queue_health_monitor.rs  standby.rs  traffic.rs  warning.rs
crates/fc-router/src/api/: auth.rs  mod.rs
crates/fc-router/src/mediator/: inner.rs  response.rs  retry.rs  signing.rs
crates/fc-sdk/: Cargo.toml  README.md
crates/fc-sdk/examples/: fc-sync.rs  list-event-types.rs  scheduled-jobs-runner.rs
crates/fc-sdk/src/: lib.rs  webhook.rs
crates/fc-sdk/src/auth/: claims.rs  jwks.rs  mod.rs  oauth.rs
crates/fc-sdk/src/auth/axum/: crypto.rs  extractor.rs  middleware.rs  mod.rs  oidc.rs  pg_session_store.rs  principal.rs  rbac.rs  redis_session_store.rs  router.rs  session.rs  state.rs
crates/fc-sdk/src/cache/: error.rs  memory.rs  mod.rs  pg.rs  redis.rs  schema.rs
crates/fc-sdk/src/client/: applications.rs  audit_logs.rs  clients.rs  connections.rs  dispatch_pools.rs  event_types.rs  me.rs  mod.rs  openapi.rs  permissions.rs  principals.rs  processes.rs  roles.rs  router.rs  scheduled_jobs.rs  subscriptions.rs
crates/fc-sdk/src/lock/: memory.rs  mod.rs  pg.rs  redis.rs  schema.rs
crates/fc-sdk/src/outbox/: mod.rs  unit_of_work.rs
crates/fc-sdk/src/scheduled_jobs/: mod.rs  runner.rs
crates/fc-sdk/src/sync/: definition_set.rs  definitions.rs  mod.rs  options.rs  result.rs  synchronizer.rs
crates/fc-sdk/src/usecase/: result.rs
crates/fc-sdk/tests/: axum_smoke.rs  scheduled_jobs_runner.rs
docs/: sdk-operations.md  sdk-parity-plan.md
docs/architecture/: README.md  adaptive-concurrency.md  architecture-direction.md  auth-and-oidc.md  go-sdk.md  message-router.md  outbox-processor.md  partitioning.md  platform-control-plane.md  quarkus-sdk.md  release-signing.md  scheduler.md  shared-crates.md  stream-processor.md  system-overview.md
docs/developers/: README.md  codebase-improvements.md  concepts.md  debugging.md  fc-dev.md  processes.md  publishing-events.md  quickstart.md  receiving-webhooks.md  router-concurrency-audit.md  scheduled-jobs.md  subscriptions-and-pools.md
docs/operations/: README.md  configuration.md  high-availability.md  identity-and-auth.md  observability.md  postgres.md  queue-and-router-config.md  runbooks.md  secrets-and-rotation.md  topologies.md
frontend/: package.json  pnpm-lock.yaml
frontend/openapi/: openapi.json
migrations/: 026_processes.sql  027_oauth_clients_service_account_fk.sql  028_application_service_account_fk.sql  029_oauth_client_post_logout_redirect_uris.sql  030_rate_limit_events.sql
(+193 files in other folders)
