[package]
name = "fc-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FlowCatalyst SDK for Rust — domain event patterns, outbox integration, and platform API client"

[features]
default = ["outbox-postgres", "cache", "lock"]
outbox-postgres = ["dep:sqlx", "sqlx/postgres", "sqlx/chrono"]
outbox-sqlite = ["dep:sqlx", "sqlx/sqlite", "sqlx/chrono"]
outbox-mysql = ["dep:sqlx", "sqlx/mysql", "sqlx/chrono"]
client = ["dep:reqwest"]
auth = ["dep:reqwest", "dep:jsonwebtoken", "dep:sha2", "dep:base64", "dep:rand"]
# Axum integration for `auth` — extractors, middleware, RBAC catalogue,
# AES-GCM cookie session storage, and OIDC login/callback handlers.
axum = ["auth", "dep:axum", "dep:axum-extra", "dep:tower", "dep:aes-gcm", "dep:urlencoding", "dep:bytes", "dep:time"]
webhook = ["dep:hmac", "dep:sha2", "dep:hex"]

# Cache primitive — Memory backend ships with the `cache` feature; the
# Postgres and Redis backends pull in sqlx / the redis crate on demand.
cache = []
cache-postgres = ["cache", "dep:sqlx", "sqlx/postgres", "sqlx/chrono"]
cache-redis = ["cache", "dep:redis"]

# Distributed lock primitive — same structure as cache.
lock = ["dep:uuid"]
lock-postgres = ["lock", "dep:sqlx", "sqlx/postgres", "sqlx/chrono"]
lock-redis = ["lock", "dep:redis"]

[dependencies]
# Core (always included)
fc-common = { path = "../fc-common" }
serde = { workspace = true }
serde_json = "1.0"
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Outbox (optional — enabled by default with postgres)
sqlx = { workspace = true, optional = true }

# HTTP client for platform API (optional)
reqwest = { workspace = true, optional = true }

# Auth (optional — OIDC/JWT validation)
jsonwebtoken = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
base64 = { version = "0.22", optional = true }
rand = { workspace = true, optional = true }
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }

# Webhook signature validation (optional)
hmac = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

# Axum integration (optional)
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
aes-gcm = { workspace = true, optional = true }
urlencoding = { version = "2.1", optional = true }
bytes = { version = "1", optional = true }
time = { version = "0.3", optional = true }

# Cache + lock backends (optional, gated by feature flags above)
redis = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

# Tokio needed for JwksCache RwLock
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
